Mise en place du system de communication NXT -> PC

--- a/factory/makefile
+++ b/factory/makefile
@@ -1,7 +1,7 @@
-TARGET_NAME=commons.jar
+TARGET_NAME=factory.jar
 SPACE=""
 
-CC=nxjc
+CC=javac
 JAR=jar
 
 SRC_DIR=src
@@ -11,7 +11,7 @@ TARGET_DIR=target
 SRC=$(shell find $(SRC_DIR)/ -type f -name '*.java')
 CLASS=$(patsubst $(SRC_DIR)/%.java, $(TARGET_DIR)/%.class, $(SRC))
 
-CFLAGS=-d $(TARGET_DIR)
+CFLAGS=-d $(TARGET_DIR) -cp $(SRC_DIR) -Xlint
 JARFLAGS=-cf
 
 TARGET=$(TARGET_DIR)/$(TARGET_NAME)
@@ -21,31 +21,17 @@ all: $(TARGET_DIR) $(TARGET)
 get_target:
 	@echo "$(TARGET)"
 
-test: all $(TEST_TARGET_DIR) runtest
-
-runtest: $(TEST_CLASS) 
-	@echo "$(SPACE)Starting the test"
-	@java $(TESTFLAGS) org.junit.runner.JUnitCore $(subst /,.,$(patsubst $(TEST_TARGET_DIR)/%.class, %, $^))
-
 $(TARGET): $(CLASS)
 
 %.jar:
 	@echo "$(SPACE)Building $(shell basename $@)"
-	@$(JAR) -cf $@ $^
+	@$(JAR) -cf $@ $(patsubst $(TARGET_DIR)/%, -C $(TARGET_DIR) %, $^)
 
 $(TARGET_DIR)/%.class: $(SRC_DIR)/%.java
 	@echo "$(SPACE)compiling $(shell basename $^)" 
 	@$(CC) $(CFLAGS) $^
 
-$(TEST_TARGET_DIR)/%.class: $(TEST_SRC_DIR)/%.java
-	@echo "$(SPACE)compiling $(shell basename $^)" 
-	@$(CC) $(TEST_CFLAGS) $^
-
 $(TARGET_DIR):
-	@echo "$(SPACE)Creating $@ directory" 
-	@mkdir -p $@
-
-$(TEST_TARGET_DIR):
 	@echo "$(SPACE)Creating $@ directory" 
 	@mkdir -p $@
 
@@ -54,7 +40,7 @@ clean:
 	@rm -f $(CLASS)
 	@echo "$(SPACE)Removing $(shell basename $(TARGET))" 
 	@rm -f $(TARGET)
-	@echo "$(SPACE)Removing $(BASE_TARGET_DIR) directory" 
-	@rm -rf $(BASE_TARGET_DIR)
+	@echo "$(SPACE)Removing $(TARGET_DIR) directory" 
+	@rm -rf $(TARGET_DIR)
 
-.PHONY: runtest clean get_target
+.PHONY: clean get_target
