--- a/walker-2014/makefile
+++ b/walker-2014/makefile
@@ -10,31 +10,25 @@ JAR=jar
 UPLOAD=nxjupload
 UPLOADFLAGS=-r
 
-BASE_SRC_DIR=src
-MAIN_SRC_DIR=$(BASE_SRC_DIR)/main/java
-TEST_SRC_DIR=$(BASE_SRC_DIR)/test/java
+SRC_DIR=src
 
-BASE_TARGET_DIR=target
-MAIN_TARGET_DIR=$(BASE_TARGET_DIR)/main/java
-TEST_TARGET_DIR=$(BASE_TARGET_DIR)/test/java
+TARGET_DIR=target
+
+MAIN_CLASS=TTT/robots/Walker
 
 COMMONS_DIR=../commons
 COMMONS_TARGET=$(COMMONS_DIR)/$(shell $(MAKE) -s -C $(COMMONS_DIR) get_target)
 COMMONS_TARGET_DIR=$(shell dirname $(COMMONS_TARGET))
 
-MAIN_SRC=$(shell find $(MAIN_SRC_DIR)/ -type f -name '*.java')
-TEST_SRC=$(shell find $(TEST_SRC_DIR)/ -type f -name '*.java')
-MAIN_CLASS=$(patsubst $(MAIN_SRC_DIR)/%.java, $(MAIN_TARGET_DIR)/%.class, $(MAIN_SRC))
-TEST_CLASS=$(patsubst $(TEST_SRC_DIR)/%.java, $(TEST_TARGET_DIR)/%.class, $(TEST_SRC))
+SRC=$(shell find $(SRC_DIR)/ -type f -name '*.java')
+CLASS=$(patsubst $(SRC_DIR)/%.java, $(TARGET_DIR)/%.class, $(SRC))
 
-MAIN_CFLAGS=-d $(MAIN_TARGET_DIR) -cp $(COMMONS_TARGET_DIR)
-TEST_CFLAGS=-d $(TEST_TARGET_DIR) -cp $(JUNITJAR):$(MAIN_TARGET_DIR)
-LINKFLAGS=-cp $(MAIN_TARGET_DIR):$(COMMONS_TARGET_DIR)
-TESTFLAGS=-cp $(JUNITJAR):$(TEST_TARGET_DIR):$(MAIN_TARGET_DIR)
+CFLAGS=-d $(TARGET_DIR) -cp $(TARGET_DIR):$(COMMONS_TARGET_DIR)
+LINKFLAGS=-cp $(TARGET_DIR):$(COMMONS_TARGET_DIR)
 
-TARGET=$(MAIN_TARGET_DIR)/$(TARGET_NAME)
+TARGET=$(TARGET_DIR)/$(TARGET_NAME)
 
-all: $(COMMONS_TARGET) $(MAIN_TARGET_DIR) $(TARGET)
+all: $(COMMONS_TARGET) $(TARGET_DIR) $(TARGET)
 
 $(COMMONS_TARGET):
 	@echo "$(SPACE)Building $(shell basename $(COMMONS_TARGET))"
@@ -43,31 +37,17 @@ $(COMMONS_TARGET):
 run: all
 	@$(UPLOAD) $(UPLOADFLAGS) $(TARGET)
 
-test: all $(TEST_TARGET_DIR) runtest
-
-runtest: $(TEST_CLASS) 
-	@echo "$(SPACE)Starting the test"
-	@java $(TESTFLAGS) org.junit.runner.JUnitCore $(subst /,.,$(patsubst $(TEST_TARGET_DIR)/%.class, %, $^))
-
-$(TARGET): $(MAIN_CLASS)
+$(TARGET): $(CLASS)
 
 %.nxj:
 	@echo "$(SPACE)Building $(shell basename $@)"
-	@$(LINK) $(LINKFLAGS) -o $@ $(patsubst $(MAIN_TARGET_DIR)/%.class, %, $<)
+	$(LINK) $(LINKFLAGS) -o $@ $(MAIN_CLASS)
 
-$(MAIN_TARGET_DIR)/%.class: $(MAIN_SRC_DIR)/%.java
+$(TARGET_DIR)/%.class: $(SRC_DIR)/%.java
 	@echo "$(SPACE)Compiling $(shell basename $^)" 
-	@$(CC) $(MAIN_CFLAGS) $<
+	@$(CC) $(CFLAGS) $<
 
-$(TEST_TARGET_DIR)/%.class: $(TEST_SRC_DIR)/%.java
-	@echo "$(SPACE)Compiling $(shell basename $^)" 
-	@$(CC) $(TEST_CFLAGS) $<
-
-$(MAIN_TARGET_DIR):
-	@echo "$(SPACE)Creating $@ directory" 
-	@mkdir -p $@
-
-$(TEST_TARGET_DIR):
+$(TARGET_DIR):
 	@echo "$(SPACE)Creating $@ directory" 
 	@mkdir -p $@
 
