Mise ne place de la lib NXT

--- a/communications/makefile
+++ b/communications/makefile
@@ -3,7 +3,6 @@ SPACE=""
 
 FACTORY_DIR=../factory/
 FACTORY_TARGET=$(FACTORY_DIR)$(shell $(MAKE) -s -C $(FACTORY_DIR) get_target)
-FACTORY_TARGET_DIR=$(shell dirname $(FACTORY_TARGET))
 
 PROCESSOR=TTT.commons.factory.FactoryProcessor
 
@@ -17,15 +16,15 @@ TARGET_DIR=target
 SRC=$(shell find $(SRC_DIR)/ -type f -name '*.java')
 CLASS=$(patsubst $(SRC_DIR)/%.java, $(TARGET_DIR)/%.class, $(SRC))
 
-CFLAGS=-d $(TARGET_DIR) -cp $(SRC_DIR):$(FACTORY_TARGET_DIR) -Xlint
+CFLAGS=-d $(TARGET_DIR) -cp $(SRC_DIR):$(FACTORY_TARGET) -Xlint
 JARFLAGS=-cf
 
-TARGET=$(TARGET_DIR)/$(TARGET_NAME)
+TARGET=$(TARGET_NAME)
 
 all: $(TARGET_DIR) processor Remote$(TARGET)
 
 processor: $(FACTORY_TARGET)
-	@echo "Processor"
+	@echo "$(SPACE)Processor"
 	@javac $(CFLAGS) -s $(SRC_DIR) -processor $(PROCESSOR) $(SRC)
 
 get_target:
@@ -42,14 +41,12 @@ $(TARGET): $(CLASS)
 %.jar:
 	@echo "$(SPACE)Building $(shell basename $@)"
 	@echo "Class-Path: $(FACTORY_TARGET)" > Manifest.txt
-	#@echo "Class-Path: $(shell basename $(FACTORY_TARGET))" > Manifest.txt
 	@$(JAR) -cfm $@ Manifest.txt $(patsubst $(TARGET_DIR)/%, -C $(TARGET_DIR) %, $^)
-	#@$(JAR) -cfm $@ Manifest.txt $(patsubst $(TARGET_DIR)/%, -C $(TARGET_DIR) %, $^) -C $(FACTORY_TARGET_DIR) $(shell basename $(FACTORY_TARGET))
 	@rm Manifest.txt
 
 $(FACTORY_TARGET):
 	@echo "$(SPACE)Creating $(shell basename $@)" 
-	@$(MAKE) -s -C $(FACTORY_DIR) SPACE=" - "
+	@$(MAKE) -s -C $(FACTORY_DIR) SPACE="$(SPACE) - "
 
 $(TARGET_DIR)/%.class: $(SRC_DIR)/%.java
 	@echo "$(SPACE)compiling $(shell basename $^)" 
