--- a/libNXT/makefile
+++ b/libNXT/makefile
@@ -1,13 +1,8 @@
-TARGET_NAME=Monitor.jar
+TARGET_NAME=libNXT.jar
 SPACE=""
 
-COMMUNICATION_DIR=../communications/
-COMMUNICATION_TARGET=$(COMMUNICATION_DIR)$(shell $(MAKE) -s -C $(COMMUNICATION_DIR) get_target)
-COMMUNICATION_TARGET_DIR=$(shell dirname $(COMMUNICATION_TARGET))
-
-CC=nxjpcc
+CC=nxjc
 JAR=jar
-RUN=nxjpc
 
 SRC_DIR=src
 
@@ -16,19 +11,15 @@ TARGET_DIR=target
 SRC=$(shell find $(SRC_DIR)/ -type f -name '*.java')
 CLASS=$(patsubst $(SRC_DIR)/%.java, $(TARGET_DIR)/%.class, $(SRC))
 
+COMMUNICATION_DIR=../communications/
+COMMUNICATION_TARGET=$(COMMUNICATION_DIR)$(shell $(MAKE) -s -C $(COMMUNICATION_DIR) get_target)
+
 CFLAGS=-d $(TARGET_DIR) -cp $(SRC_DIR):$(COMMUNICATION_TARGET) -Xlint
+JARFLAGS=-cf
 
 TARGET=$(TARGET_NAME)
 
 all: $(COMMUNICATION_TARGET) $(TARGET_DIR) $(TARGET)
-
-$(COMMUNICATION_TARGET):
-	@echo "$(SPACE)Creating $(shell basename $@)"
-	@$(MAKE) -s -C $(COMMUNICATION_DIR) SPACE="$(SPACE) - "
-
-run: all
-	$(RUN) -cp $(TARGET):$(COMMUNICATION_TARGET) TTT.PC.Monitor
-	#@$(RUN) -jar $(TARGET) TTT.PC.Monitor
 
 get_target:
 	@echo "$(TARGET)"
@@ -38,7 +29,7 @@ $(TARGET): $(CLASS)
 %.jar:
 	@echo "$(SPACE)Building $(shell basename $@)"
 	@echo "Class-Path: $(COMMUNICATION_TARGET)" > Manifest.txt
-	@$(JAR) -cfme $@ Manifest.txt TTT.PC.Monitor $(patsubst $(TARGET_DIR)/%,-C $(TARGET_DIR) %, $^)
+	@$(JAR) -cfm $@ Manifest.txt $(patsubst $(TARGET_DIR)/%, -C $(TARGET_DIR) %, $^)
 	@rm Manifest.txt
 
 $(TARGET_DIR)/%.class: $(SRC_DIR)/%.java
@@ -49,6 +40,10 @@ $(TARGET_DIR):
 	@echo "$(SPACE)Creating $@ directory" 
 	@mkdir -p $@
 
+$(COMMUNICATION_TARGET):
+	@echo "$(SPACE)Creating $(shell basename $@)"
+	@$(MAKE) -s -C $(COMMUNICATION_DIR) SPACE="$(SPACE) - "
+
 clean:
 	@echo "$(SPACE)Removing class files" 
 	@rm -f $(CLASS)
@@ -57,4 +52,4 @@ clean:
 	@echo "$(SPACE)Removing $(TARGET_DIR) directory" 
 	@rm -rf $(TARGET_DIR)
 
-.PHONY: clean get_target
+.PHONY: clean get_target $(COMMUNICATION_TARGET)
