Mise en place du listener de message coté NXT

--- a/wheeler-2014/makefile
+++ b/wheeler-2014/makefile
@@ -42,7 +42,7 @@ $(LIBNXT_TARGET):
 run: all
 	@$(UPLOAD) $(UPLOADFLAGS) $(TARGET)
 
-$(TARGET): $(CLASS)
+$(TARGET): $(CLASS) $(LIBNXT_TARGET)
 
 %.nxj:
 	@echo "$(SPACE)Building $(shell basename $@)"
